tests/unit/default/syntax-error/113-add-i.x.t
---- IN ----
+I|
---- OUT ----
---- ERR ----
syntax: expected <table-columns-ref> after `+I` near `|` at position 2 - at line 1
---- EXIT ----
1
